New improvements: 	- New API definitions for non auth map queries 	- New model definitions for non auth map queries 	- New tests for mapping actions 	- Modified swagger documentation 	- New orm configuration to increase timeOut
